--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Willy Wonkas - Personal Portfolio Website Template" />
+    <meta name="description" content="WPersonal Portfolio" />
 	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
 	<meta name="author" content="willy wonka" />
-    <title>Willy Wonkas - Personal Portfolio Website Template</title>
+    <title>Personal Portfolio</title>
   <!--favicon-img--> 
    <link rel="icon" type="image/png" href="images/favicon.png">
    <!--favicon-img-->
@@ -24,7 +24,7 @@
     <!--mouse  follower-->
     <!--loader-->
         <div id="loader">
-            <span class="color">Arlo</span>Brown 
+            <span class="color">Jhon</span>Diaz 
         </div>
     <!--loader-end-->
     <!--link-screen-->
@@ -77,10 +77,10 @@
             <!--Social Media Links end-->
             <div class="header-content">
                 <div class="header-content-box">
-                <div class="firstline"><span class="color">Arlo </span>Brown</div>
+                <div class="firstline"><span class="color">Jhon </span>Diaz</div>
                 <div class="secondline">
                 I'm a
-            <span class="txt-rotate color" data-period="1200"data-rotate='[ " Designer.", " Blogger.", " Freelancer." ]'></span>
+            <span class="txt-rotate color" data-period="1200"data-rotate='[ " Architect.", " Developer.", " Freelancer." ]'></span>
             <span class="slash">|</span>
         </div>
                     <div class="contact">
@@ -91,7 +91,7 @@
             </div>
             <!--header image-->
             <div class="header-image">
-            <img src="images/man.jpg" alt="logo">
+            <img src="images/man2.jpeg" alt="logo">
             </div>
             <!--header image end-->
         </div>
@@ -576,7 +576,7 @@
                     <img src="./images/icon-name.png" class="icon" alt="name-icon">
                     <div class="contact-info-icon-text">
                         <h6>Name</h6>
-                        <p>Arlo Brown</p>
+                        <p>Jhon Diaz</p>
                   </div>
                 </div>
                 <div class="contect-info-content-line">
